Fix footer button not visible icon.
Also fix overflow blocks with animations and carousels.

--- a/src/shared/ui/layout/BlockWithTitle/BlockWithTitle.module.scss
+++ b/src/shared/ui/layout/BlockWithTitle/BlockWithTitle.module.scss
@@ -3,7 +3,6 @@
 .block {
 	padding: rem(40) 0;
 	width: 100%;
-	overflow-x: hidden;
 
 	@media (max-width: $max-768) {
 		padding: rem(20) 0;
